Pet images no longer flicker when they resize on hover.

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -16,20 +16,15 @@ You can use Sass (SCSS) here: http://sass-lang.com/
     -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
     -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
     box-shadow: 0 4px 6px rgba(0,0,0,.3);
-    z-index:0;
-    position:relative;
-    width: 272.75;
-    height: 300px;
+    z-index: 0;
+    position: relative;
     overflow: hidden;
+    min-width: 280px;
 
     img {
       object-fit: cover;
     }
 
-    img:hover {
-      height: 250;
-      width: auto;
-    }
 
     /*DISPLAY PET'S NAME UNDER PHOTO - WORK IN PROGRESS*/
     /*img::after {
@@ -40,4 +35,12 @@ You can use Sass (SCSS) here: http://sass-lang.com/
     }*/
 
   }
+
+  .card:hover {
+    img {
+      height: 250;
+      width: auto;
+    }
+  }
+
 }
